[package]
name = "vox-compiler"
version.workspace = true
edition.workspace = true
description = "Unified Vox compiler crate containing lexer, parser, AST, HIR, typechecker, and codegen."

[features]
default = []
ai-fixtures-v1 = []

[dependencies]
logos = { workspace = true }
vox-eval = { workspace = true }
vox-grammar-export = { workspace = true }
vox-repository = { workspace = true }
vox-deploy-codegen = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
sha3 = { workspace = true }
flate2 = "1.1.9"
bzip2 = "0.6.1"
zstd = "0.13.3"
rust_decimal = { workspace = true }
chrono = { workspace = true }
vox-secrets.workspace = true
vox-config.workspace = true
secrecy = { workspace = true }
which = { workspace = true }
glob = "0.3.1"
workspace-hack = { workspace = true }
vox-primitives.workspace = true
tokio = { workspace = true }
csv = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
rayon = { workspace = true }

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }

[dev-dependencies]
vox-codegen = { workspace = true }
serde_yaml = { workspace = true }
jsonschema = { workspace = true }
serial_test = { workspace = true }
vox-jsonschema-util = { path = "../vox-jsonschema-util" }
vox-test-harness = { path = "../vox-test-harness" }
insta = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "compiler_pipeline"
harness = false

[[bench]]
name = "golden_examples"
harness = false

[lints]
workspace = true
