[package]
name = "vox-config"
version.workspace = true
edition.workspace = true
description = "Centralized configuration and env/default resolution for Vox tooling"

[dependencies]
serde       = { workspace = true, features = ["derive"] }
toml.workspace = true
serde_json  = { workspace = true }
tracing     = { workspace = true }
vox-clavis  = { workspace = true }
workspace-hack = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true

