[package]
name = "vox-config"
version.workspace = true
edition.workspace = true
description = "Centralized configuration and env/default resolution for Vox tooling"

[dependencies]
serde       = { workspace = true, features = ["derive"] }
toml.workspace = true
serde_json  = { workspace = true }
tracing     = { workspace = true }
vox-secrets  = { workspace = true }
workspace-hack = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

