[package]
name = "vox-container"
description = "OCI container runtime abstraction for Vox — supports Docker and Podman"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
