[package]
name = "vox-container"
description = "OCI container runtime abstraction for Vox — supports Docker and Podman"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
vox-exec-grammar.workspace = true
# Docker/Podman implementations live in the plugin; vox-container re-exports detect_runtime
# for backward compat by instantiating impls directly (rlib feature).
vox-plugin-runtime-container.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
workspace-hack = { workspace = true }
