[package]
name = "vox-corpus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Training data contracts, preflight, corpus SSOT, and Populi dataset metadata"

[features]
database = ["dep:vox-db", "dep:turso"]
parser-verify = ["dep:vox-compiler"]

[dependencies]
vox-db = { path = "../vox-db", optional = true }
turso = { workspace = true, optional = true }
vox-compiler = { workspace = true, optional = true }
anyhow = { workspace = true }
vox-repository = { path = "../vox-repository" }
vox-mcp-meta = { path = "../vox-mcp-meta" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = "0.10"
blake3 = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
xxhash-rust = { workspace = true }

[build-dependencies]
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
quote = "1.0"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
