[package]
name = "vox-corpus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Training data contracts, preflight, corpus SSOT, and Mens dataset metadata"

[features]
database = ["dep:vox-db", "dep:turso"]
parser-verify = ["ast-extract"]
# Walk parsed `Module` declarations for Mens `.vox` pair extraction (avoids lexer drift vs heuristics).
ast-extract = []

[dependencies]
vox-db = { path = "../vox-db", optional = true }
turso = { workspace = true, optional = true }
vox-compiler = { path = "../vox-compiler", version = "0.1.0" }
anyhow = { workspace = true }
vox-repository = { path = "../vox-repository" }
vox-bounded-fs = { workspace = true }
vox-mcp-meta = { path = "../vox-mcp-meta" }
vox-mcp-registry = { path = "../vox-mcp-registry" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
xxhash-rust = { workspace = true }
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
quote = "1.0"

[build-dependencies]
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
quote = "1.0"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
